[gd_scene load_steps=10 format=3 uid="uid://c8iqk8sncrk2x"]

[ext_resource type="Script" uid="uid://dvxefxtxbeb4x" path="res://ui/hud/hud.gd" id="1_w75iv"]
[ext_resource type="FontFile" uid="uid://2lelg2toamun" path="res://assets/fonts/jetbrains_extrabold.ttf" id="2_imuuq"]
[ext_resource type="StyleBox" uid="uid://blhovwbquxv71" path="res://resources/buttons/normal.tres" id="3_kwc50"]
[ext_resource type="StyleBox" uid="uid://ycngd8comrtl" path="res://resources/buttons/hover.tres" id="4_o2lis"]
[ext_resource type="StyleBox" uid="uid://ca6hnsey3780x" path="res://resources/buttons/disabled.tres" id="5_imuuq"]

[sub_resource type="Theme" id="Theme_kwc50"]
default_font = ExtResource("2_imuuq")

[sub_resource type="Animation" id="Animation_kwc50"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("money:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-446, 776)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-446, 861)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sell_all:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-446, 946)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("upgrades:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-446, 36)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("info:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-178, 909)]
}

[sub_resource type="Animation" id="Animation_imuuq"]
resource_name = "enter"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("money:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-446, 776), Vector2(34, 776)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menu:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-446, 861), Vector2(34, 861)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sell_all:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-446, 946), Vector2(34, 946)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("upgrades:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-446, 36), Vector2(34, 36)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("info:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-178, 909), Vector2(296, 909)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfles"]
_data = {
&"RESET": SubResource("Animation_kwc50"),
&"enter": SubResource("Animation_imuuq")
}

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_kwc50")
script = ExtResource("1_w75iv")

[node name="interaction_label" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -631.0
offset_top = -177.0
offset_right = 631.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_imuuq")
theme_override_font_sizes/normal_font_size = 42
text = "text goes here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="money" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013541667
anchor_top = 0.7185185
anchor_right = 0.1453125
anchor_bottom = 0.7824074
offset_left = -472.0
offset_right = -472.0
theme_override_fonts/normal_font = ExtResource("2_imuuq")
theme_override_font_sizes/normal_font_size = 48
text = "£0.00"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="egg_status" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -36.0
offset_right = 257.0
offset_bottom = 33.0
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_imuuq")
theme_override_font_sizes/normal_font_size = 32
text = "Holding Egg"
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013541667
anchor_top = 0.7972222
anchor_right = 0.1453125
anchor_bottom = 0.85833335
offset_left = -472.0
offset_right = -472.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_imuuq")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_kwc50")
theme_override_styles/pressed_mirrored = ExtResource("3_kwc50")
theme_override_styles/hover = ExtResource("4_o2lis")
text = "MENU"
metadata/_edit_use_anchors_ = true

[node name="sell_all" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013541667
anchor_top = 0.8759259
anchor_right = 0.1453125
anchor_bottom = 0.93703705
offset_left = -472.0
offset_right = -472.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_imuuq")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_kwc50")
theme_override_styles/pressed_mirrored = ExtResource("3_kwc50")
theme_override_styles/hover = ExtResource("4_o2lis")
text = "SELL ALL"
metadata/_edit_use_anchors_ = true

[node name="info" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.84166664
anchor_right = 0.4328125
anchor_bottom = 0.8935185
offset_left = -946.0
offset_right = -959.0
offset_bottom = -5.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_imuuq")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_kwc50")
theme_override_styles/pressed_mirrored = ExtResource("3_kwc50")
theme_override_styles/hover = ExtResource("4_o2lis")
text = "!"
metadata/_edit_use_anchors_ = true

[node name="instructions" type="RichTextLabel" parent="info"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -51.0
offset_right = 1124.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 32
text = "Purchase all 5 upgrades and make £150  to reach the end!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrades" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0140625
anchor_top = 0.012037037
anchor_right = 0.15468775
anchor_bottom = 0.26944444
offset_left = -473.0
offset_top = 23.0
offset_right = -473.0
offset_bottom = 23.0
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="value" type="Button" parent="upgrades"]
layout_mode = 2
tooltip_text = "Sell eggs for 1.5x more value!"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_imuuq")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("3_kwc50")
theme_override_styles/pressed_mirrored = ExtResource("3_kwc50")
theme_override_styles/hover = ExtResource("4_o2lis")
theme_override_styles/disabled = ExtResource("5_imuuq")
text = "BETTER VALUE"
metadata/_edit_use_anchors_ = true

[node name="cost" type="RichTextLabel" parent="upgrades/value"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -19.5
offset_right = 135.0
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 21
text = "[£24.00]"
vertical_alignment = 1

[node name="storage" type="Button" parent="upgrades"]
layout_mode = 2
tooltip_text = "Upgrade all crates to have +4 storage!"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_imuuq")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("3_kwc50")
theme_override_styles/pressed_mirrored = ExtResource("3_kwc50")
theme_override_styles/hover = ExtResource("4_o2lis")
theme_override_styles/disabled = ExtResource("5_imuuq")
text = "MORE STORAGE"
metadata/_edit_use_anchors_ = true

[node name="cost" type="RichTextLabel" parent="upgrades/storage"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -19.5
offset_right = 135.0
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 21
text = "[£35.00]"
vertical_alignment = 1

[node name="special" type="Button" parent="upgrades"]
layout_mode = 2
tooltip_text = "Add special eggs to the mix!"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_imuuq")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("3_kwc50")
theme_override_styles/pressed_mirrored = ExtResource("3_kwc50")
theme_override_styles/hover = ExtResource("4_o2lis")
theme_override_styles/disabled = ExtResource("5_imuuq")
text = "SPECIAL EGGS"
metadata/_edit_use_anchors_ = true

[node name="cost" type="RichTextLabel" parent="upgrades/special"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -19.5
offset_right = 135.0
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 21
text = "[£48.00]"
vertical_alignment = 1

[node name="bonus" type="Button" parent="upgrades"]
layout_mode = 2
tooltip_text = "Double the value of the crate if sold when full!"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_imuuq")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("3_kwc50")
theme_override_styles/pressed_mirrored = ExtResource("3_kwc50")
theme_override_styles/hover = ExtResource("4_o2lis")
theme_override_styles/disabled = ExtResource("5_imuuq")
text = "EXTRA BONUS"
metadata/_edit_use_anchors_ = true

[node name="cost" type="RichTextLabel" parent="upgrades/bonus"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -19.5
offset_right = 135.0
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 21
text = "[£56.00]"
vertical_alignment = 1

[node name="autosell" type="Button" parent="upgrades"]
layout_mode = 2
tooltip_text = "When the crate is full, sell automatically!"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_imuuq")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("3_kwc50")
theme_override_styles/pressed_mirrored = ExtResource("3_kwc50")
theme_override_styles/hover = ExtResource("4_o2lis")
theme_override_styles/disabled = ExtResource("5_imuuq")
text = "AUTO SELL"
metadata/_edit_use_anchors_ = true

[node name="cost" type="RichTextLabel" parent="upgrades/autosell"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -19.5
offset_right = 135.0
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 21
text = "[£70.00]"
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gfles")
}

[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="sell_all" to="." method="_on_sell_all_pressed"]
[connection signal="mouse_entered" from="info" to="." method="_on_info_mouse_entered"]
[connection signal="mouse_exited" from="info" to="." method="_on_info_mouse_exited"]
